--- a/index.html
+++ b/index.html
@@ -8,4 +8,21 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="contenedor">
+        <div class="borde" id="encabezado">
+          div encabezado
+          <div class="elementos" id="menu1">div menu1</div>
+          <div class="elementos" id="logo">div logo</div>
+          <div class="elementos" id="menu2">div menu2</div>
+        </div>
+        <div class="comun borde color1">div izquierda</div>
+        <div class="comun borde color2">div centro</div>
+        <div class="comun borde color3">div derecha</div>
+        <div class="borde" id="izquierda2">div izquierda 2</div>
+        <div class="borde comun color4">div derecha 2</div>
+        <div class="borde pie">
+          pie
+          <div class="elementos">div elementos</div>
+        </div>
+      </div>
   </body>
